Removing some logs

--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/all.min.css" />
 
     <!-- Page Logo -->
-    <link rel="icon" href="assets/Images/ai-logo-2.png" />
-    <link rel="apple-touch-icon" href="assets/Images/ai-logo-2.png" />
+    <link rel="icon" href="assets/Images/ai-dental-blue.png" />
+    <link rel="apple-touch-icon" href="assets/Images/ai-dental-blue.png" />
     <title>ToothVision: Contact Us</title>
   </head>
   <body>
