--- a/products.html
+++ b/products.html
@@ -8,13 +8,9 @@
     <link rel="stylesheet" type="text/css" href="assets/css/products.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/all.min.css" />
 
-    <!-- <meta
-      http-equiv="Content-Security-Policy"
-      content="upgrade-insecure-requests"
-    /> -->
     <!-- Page Logo -->
-    <link rel="icon" href="assets/Images/ai-logo-2.png" />
-    <link rel="apple-touch-icon" href="assets/Images/ai-logo-2.png" />
+    <link rel="icon" href="assets/Images/ai-dental-blue.png" />
+    <link rel="apple-touch-icon" href="assets/Images/ai-dental-blue.png" />
     <title>ToothVision: Our Product</title>
   </head>
   <body>
