added three inputs

--- a/products.html
+++ b/products.html
@@ -2,15 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/products.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/all.min.css" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/products.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/all.min.css"
+    />
 
     <!-- Page Logo -->
-    <link rel="icon" href="assets/Images/ai-dental-blue.png" />
-    <link rel="apple-touch-icon" href="assets/Images/ai-dental-blue.png" />
+    <link
+      rel="icon"
+      href="assets/Images/ai-dental-blue.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="assets/Images/ai-dental-blue.png"
+    />
     <title>ToothVision: Our Product</title>
   </head>
   <body>
@@ -31,19 +55,33 @@
             <span>AI for you, with you</span>
           </div>
         </div>
-        <video autoplay loop muted>
-          <source src="assets/Images/Products Video.mp4" type="video/mp4" />
+        <video
+          autoplay
+          loop
+          muted
+        >
+          <source
+            src="assets/Images/Products Video.mp4"
+            type="video/mp4"
+          />
         </video>
       </section>
       <!-- === END HERO SECTION === -->
 
       <!-- === START OUR PRODUCTS === -->
-      <section class="section" id="products">
+      <section
+        class="section"
+        id="products"
+      >
         <div class="container">
           <h2 class="title">our product</h2>
           <div class="uploading-images">
             <div class="input">
-              <input id="upload-input" type="file" multiple="multiple" />
+              <input
+                id="upload-input"
+                type="file"
+                multiple="multiple"
+              />
               <label for="upload-input">Upload an image</label>
             </div>
             <img
@@ -185,6 +223,42 @@
                     value="Perio"
                   />
                   <label for="Perio">Perio</label>
+                </div>
+                <div>
+                  <input
+                    class="disease"
+                    type="checkbox"
+                    name="Fur_Upper"
+                    id="Fur_Upper"
+                    data-disease-name="Fur_Upper"
+                    data-color="brown"
+                    value="Fur_Upper"
+                  />
+                  <label for="Fur_Upper">Fur_Upper</label>
+                </div>
+                <div>
+                  <input
+                    class="disease"
+                    type="checkbox"
+                    name="Fur_Lower"
+                    id="Fur_Lower"
+                    data-disease-name="Fur_Lower"
+                    data-color="brown"
+                    value="Fur_Lower"
+                  />
+                  <label for="Fur_Lower">Fur_Lower</label>
+                </div>
+                <div>
+                  <input
+                    class="disease"
+                    type="checkbox"
+                    name="Fur_Lower"
+                    id="Fur_Lower"
+                    data-disease-name="Fur_Lower"
+                    data-color="brown"
+                    value="Fur_Lower"
+                  />
+                  <label for="Fur_Lower">Fur_Lower</label>
                 </div>
               </div>
               <div class="choosing-models">
