Change image name

--- a/products.html
+++ b/products.html
@@ -95,61 +95,65 @@
                   <input
                     class="disease"
                     type="checkbox"
-                    name="caries"
-                    id="caries"
-                    data-disease-name="caries"
+                    name="Caries"
+                    id="Caries"
+                    data-disease-name="Caries"
                     data-color="red"
-                    value="caries"
+                    value="Caries"
                   />
-                  <label for="caries">Caries</label>
+                  <label for="Caries">Caries</label>
                 </div>
                 <div>
+                  <!-- periapical lesion -->
                   <input
                     class="disease"
                     type="checkbox"
-                    name="periapical lesion"
-                    id="periapical-lesion"
-                    data-disease-name="periapical lesion"
+                    name="PL"
+                    id="PL"
+                    data-disease-name="PL"
                     data-color="green"
-                    value="periapical lesion"
+                    value="PL"
                   />
-                  <label for="periapical-lesion">PL</label>
+                  <label for="PL">PL</label>
                 </div>
                 <div>
+                  <!-- root-canal-treatment -->
                   <input
                     class="disease"
                     type="checkbox"
-                    name="root canal treatment"
+                    name="RCT"
                     id="root-canal-treatment"
-                    data-disease-name="root canal treatment"
+                    data-disease-name="RCT"
                     data-color="yellow"
-                    value="root canal treatment"
+                    value="RCT"
                   />
-                  <label for="root-canal-treatment">RCT</label>
+                  <label for="RCT">RCT</label>
                 </div>
                 <div>
+                  <!-- recurrent-caries -->
                   <input
                     class="disease"
                     type="checkbox"
-                    name="recurrent caries"
-                    id="recurrent-caries"
-                    data-disease-name="recurrent caries"
+                    name="RC"
+                    id="RC"
+                    data-disease-name="RC"
                     data-color="blue"
-                    value="recurrent caries"
+                    value="RC"
                   />
-                  <label for="recurrent-caries">RC</label>
+                  <label for="RC">RC</label>
                 </div>
                 <div>
+                  <!-- remaining-root -->
                   <input
                     class="disease"
                     type="checkbox"
-                    name="remaining root"
+                    name="RR"
                     id="remaining-root"
-                    data-disease-name="remaining root"
+                    data-disease-name="RR"
                     data-color="orange"
-                    value="remaining root"
+                    value="RR"
                   />
-                  <label for="remaining-root">RR</label>
+                  <label for="RR">RR</label>
                 </div>
                 <div>
                   <input
@@ -167,13 +171,13 @@
                   <input
                     class="disease"
                     type="checkbox"
-                    name="crown"
-                    id="crown"
-                    data-disease-name="crown"
+                    name="Crown"
+                    id="Crown"
+                    data-disease-name="Crown"
                     data-color="crimson"
-                    value="crown"
+                    value="Crown"
                   />
-                  <label for="crown">Crown</label>
+                  <label for="Crown">Crown</label>
                 </div>
 
                 <div>
