Added a new meta tag to the header

--- a/about.html
+++ b/about.html
@@ -2,19 +2,47 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <meta
       name="description"
       content="An AI dental clinic in your web browser"
     />
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/about.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/about.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/all.min.css"
+    />
 
     <!-- Page Logo -->
-    <link rel="icon" href="assets/Images/ai-logo-2.png" />
-    <link rel="apple-touch-icon" href="assets/Images/ai-logo-2.png" />
+    <link
+      rel="icon"
+      href="assets/Images/ai-logo-2.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="assets/Images/ai-logo-2.png"
+    />
     <title>ToothVision: About Us</title>
   </head>
   <body>
@@ -38,7 +66,10 @@
       <!-- === END HERO SECTION === -->
 
       <!-- === START ABOUT US === -->
-      <section class="section" id="about-us">
+      <section
+        class="section"
+        id="about-us"
+      >
         <div class="container">
           <h2 class="title">about us</h2>
           <div class="about-summery">
@@ -62,7 +93,10 @@
       <!-- === END ABOUT US === -->
 
       <!-- === START OUR PROJECTS === -->
-      <section class="section" id="our-projects">
+      <section
+        class="section"
+        id="our-projects"
+      >
         <div class="container">
           <h2 class="title">our projects</h2>
           <p class="bottom-title">
@@ -130,7 +164,10 @@
                 consectetur aspernatur numquam, ipsa blanditiis consequatur
                 quas?
               </p>
-              <img src="assets/Images/hero-image-01.jpg" alt="" />
+              <img
+                src="assets/Images/hero-image-01.jpg"
+                alt=""
+              />
             </div>
           </div>
         </div>
@@ -138,12 +175,18 @@
       <!-- === END OUR PROJECTS === -->
 
       <!-- === START OUR PROJECTS === -->
-      <section class="section" id="our-team">
+      <section
+        class="section"
+        id="our-team"
+      >
         <div class="container">
           <h2 class="title">our team</h2>
           <div class="team-holder grid-3">
             <div class="card">
-              <img src="assets/Images/hero-image-01.jpg" alt="" />
+              <img
+                src="assets/Images/hero-image-01.jpg"
+                alt=""
+              />
               <q>Lorem ipsum dolor sit, amet consectetur adipisicing elit</q>
               <a href="#">
                 <i class="fa-brands fa-linkedin-in"></i>
@@ -151,7 +194,10 @@
               </a>
             </div>
             <div class="card">
-              <img src="assets/Images/hero-image-01.jpg" alt="" />
+              <img
+                src="assets/Images/hero-image-01.jpg"
+                alt=""
+              />
               <q>Lorem ipsum dolor sit, amet consectetur adipisicing elit</q>
               <a href="#">
                 <i class="fa-brands fa-linkedin-in"></i>
@@ -159,7 +205,10 @@
               </a>
             </div>
             <div class="card">
-              <img src="assets/Images/hero-image-01.jpg" alt="" />
+              <img
+                src="assets/Images/hero-image-01.jpg"
+                alt=""
+              />
               <q>Lorem ipsum dolor sit, amet consectetur adipisicing elit</q>
               <a href="#">
                 <i class="fa-brands fa-linkedin-in"></i>
@@ -167,7 +216,10 @@
               </a>
             </div>
             <div class="card">
-              <img src="assets/Images/hero-image-01.jpg" alt="" />
+              <img
+                src="assets/Images/hero-image-01.jpg"
+                alt=""
+              />
               <q>Lorem ipsum dolor sit, amet consectetur adipisicing elit</q>
               <a href="#">
                 <i class="fa-brands fa-linkedin-in"></i>
@@ -175,7 +227,10 @@
               </a>
             </div>
             <div class="card">
-              <img src="assets/Images/hero-image-01.jpg" alt="" />
+              <img
+                src="assets/Images/hero-image-01.jpg"
+                alt=""
+              />
               <q>Lorem ipsum dolor sit, amet consectetur adipisicing elit</q>
               <a href="#">
                 <i class="fa-brands fa-linkedin-in"></i>
@@ -183,7 +238,10 @@
               </a>
             </div>
             <div class="card">
-              <img src="assets/Images/hero-image-01.jpg" alt="" />
+              <img
+                src="assets/Images/hero-image-01.jpg"
+                alt=""
+              />
               <q>Lorem ipsum dolor sit, amet consectetur adipisicing elit</q>
               <a href="#">
                 <i class="fa-brands fa-linkedin-in"></i>
