--- a/index.html
+++ b/index.html
@@ -2,19 +2,47 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <meta
       name="description"
       content="An AI dental clinic in your web browser"
     />
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/home.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/home.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/all.min.css"
+    />
 
     <!-- Page Logo -->
-    <link rel="icon" href="assets/Images/ai-dental-blue.png" />
-    <link rel="apple-touch-icon" href="assets/Images/ai-dental-blue.png" />
+    <link
+      rel="icon"
+      href="assets/Images/ai-dental-blue.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="assets/Images/ai-dental-blue.png"
+    />
     <title>ToothVision, your AI dental</title>
   </head>
   <body>
@@ -42,7 +70,10 @@
       <!-- === END HERO SECTION === -->
 
       <!-- === START OUR VISION === -->
-      <section class="section" id="vision">
+      <section
+        class="section"
+        id="vision"
+      >
         <div class="container">
           <h2 class="title">our vision</h2>
           <p class="bottom-title">
@@ -53,7 +84,10 @@
           </p>
           <div class="vision-cards grid-2">
             <div class="card">
-              <img src="assets/Images/tooth.svg" alt="tooth" />
+              <img
+                src="assets/Images/tooth.svg"
+                alt="tooth"
+              />
               <div class="card-text">
                 <h3>Segmentation</h3>
                 <p>
@@ -65,7 +99,10 @@
               </div>
             </div>
             <div class="card">
-              <img src="assets/Images/tooth.svg" alt="tooth" />
+              <img
+                src="assets/Images/tooth.svg"
+                alt="tooth"
+              />
               <div class="card-text">
                 <h3>Detection</h3>
                 <p>
@@ -77,7 +114,10 @@
               </div>
             </div>
             <div class="card">
-              <img src="assets/Images/tooth.svg" alt="tooth" />
+              <img
+                src="assets/Images/tooth.svg"
+                alt="tooth"
+              />
               <div class="card-text">
                 <h3>CNN</h3>
                 <p>
@@ -90,7 +130,10 @@
               </div>
             </div>
             <div class="card">
-              <img src="assets/Images/tooth.svg" alt="tooth" />
+              <img
+                src="assets/Images/tooth.svg"
+                alt="tooth"
+              />
               <div class="card-text">
                 <h3>Fast and Accurate Detection</h3>
                 <p>
@@ -106,12 +149,18 @@
       <!-- === END OUR VISION === -->
 
       <!-- === START CHOOSE US === -->
-      <section class="section" id="choose-us">
+      <section
+        class="section"
+        id="choose-us"
+      >
         <div class="container">
           <h2 class="title">why choose us</h2>
           <div class="choose-cards grid-3">
             <div class="card">
-              <img src="assets/Images/tooth.svg" alt="tooth" />
+              <img
+                src="assets/Images/tooth.svg"
+                alt="tooth"
+              />
               <h3>Expertise</h3>
               <p>
                 Developed by top-notch researchers with extensive experience
@@ -120,7 +169,10 @@
               </p>
             </div>
             <div class="card">
-              <img src="assets/Images/tooth.svg" alt="tooth" />
+              <img
+                src="assets/Images/tooth.svg"
+                alt="tooth"
+              />
               <h3>Cutting-edge Technology</h3>
               <p>
                 Harnessing cutting-edge, state-of-the-art technology to deliver
@@ -129,7 +181,10 @@
               </p>
             </div>
             <div class="card">
-              <img src="assets/Images/tooth.svg" alt="tooth" />
+              <img
+                src="assets/Images/tooth.svg"
+                alt="tooth"
+              />
               <h3>Reliability</h3>
               <p>
                 Accurate Dental Diagnosis. Our product utilizes advanced
