--- a/contact.html
+++ b/contact.html
@@ -2,19 +2,47 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <meta
       name="description"
       content="An AI dental clinic in your web browser"
     />
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/contact.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/contact.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/all.min.css"
+    />
 
     <!-- Page Logo -->
-    <link rel="icon" href="assets/Images/ai-dental-blue.png" />
-    <link rel="apple-touch-icon" href="assets/Images/ai-dental-blue.png" />
+    <link
+      rel="icon"
+      href="assets/Images/ai-dental-blue.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="assets/Images/ai-dental-blue.png"
+    />
     <title>ToothVision: Contact Us</title>
   </head>
   <body>
@@ -39,7 +67,10 @@
       <!-- === END HERO SECTION === -->
 
       <!-- === START CONTACT US === -->
-      <section class="section" id="contact-us-section">
+      <section
+        class="section"
+        id="contact-us-section"
+      >
         <h2 class="title">contact us</h2>
         <div class="container">
           <div class="contact-form">
@@ -50,11 +81,19 @@
             >
               <div class="top">
                 <div>
-                  <input type="text" name="name" required />
+                  <input
+                    type="text"
+                    name="name"
+                    required
+                  />
                   <label for="name">Your Name</label>
                 </div>
                 <div>
-                  <input type="email" name="email" required />
+                  <input
+                    type="email"
+                    name="email"
+                    required
+                  />
                   <label for="email">Your Email</label>
                 </div>
               </div>
