Adding animation to checkbox

--- a/products.html
+++ b/products.html
@@ -92,176 +92,203 @@
             <div class="uploaded-image">
               <div class="list-diseases hidden">
                 <div>
-                  <input
-                    class="disease"
-                    type="checkbox"
-                    name="Caries"
-                    id="Caries"
-                    data-disease-name="Caries"
-                    data-color="red"
-                    value="Caries"
-                  />
+                  <label class="container-label">
+                    <input
+                      class="disease checkmark"
+                      type="checkbox"
+                      name="Caries"
+                      id="Caries"
+                      data-disease-name="Caries"
+                      data-color="red"
+                      value="Caries"
+                    />
+                    <div class="checkmark"></div>
+                  </label>
                   <label for="Caries">Caries</label>
                 </div>
                 <div>
                   <!-- periapical lesion -->
-                  <input
-                    class="disease"
-                    type="checkbox"
-                    name="PL"
-                    id="PL"
-                    data-disease-name="PL"
-                    data-color="green"
-                    value="PL"
-                  />
+                  <label class="container-label">
+                    <input
+                      class="disease"
+                      type="checkbox"
+                      name="PL"
+                      id="PL"
+                      data-disease-name="PL"
+                      data-color="green"
+                      value="PL"
+                    />
+                    <div class="checkmark"></div>
+                  </label>
                   <label for="PL">PL</label>
                 </div>
                 <div>
                   <!-- root-canal-treatment -->
-                  <input
-                    class="disease"
-                    type="checkbox"
-                    name="RCT"
-                    id="root-canal-treatment"
-                    data-disease-name="RCT"
-                    data-color="yellow"
-                    value="RCT"
-                  />
+                  <label class="container-label">
+                    <input
+                      class="disease"
+                      type="checkbox"
+                      name="RCT"
+                      id="RCT"
+                      data-disease-name="RCT"
+                      data-color="yellow"
+                      value="RCT"
+                    />
+                    <div class="checkmark"></div>
+                  </label>
                   <label for="RCT">RCT</label>
                 </div>
                 <div>
                   <!-- recurrent-caries -->
-                  <input
-                    class="disease"
-                    type="checkbox"
-                    name="RC"
-                    id="RC"
-                    data-disease-name="RC"
-                    data-color="blue"
-                    value="RC"
-                  />
+                  <label class="container-label">
+                    <input
+                      class="disease"
+                      type="checkbox"
+                      name="RC"
+                      id="RC"
+                      data-disease-name="RC"
+                      data-color="blue"
+                      value="RC"
+                    />
+                    <div class="checkmark"></div>
+                  </label>
                   <label for="RC">RC</label>
                 </div>
                 <div>
                   <!-- remaining-root -->
-                  <input
-                    class="disease"
-                    type="checkbox"
-                    name="RR"
-                    id="remaining-root"
-                    data-disease-name="RR"
-                    data-color="orange"
-                    value="RR"
-                  />
+                  <label class="container-label">
+                    <input
+                      class="disease"
+                      type="checkbox"
+                      name="RR"
+                      id="RR"
+                      data-disease-name="RR"
+                      data-color="orange"
+                      value="RR"
+                    />
+                    <div class="checkmark"></div>
+                  </label>
                   <label for="RR">RR</label>
                 </div>
                 <div>
-                  <input
-                    class="disease"
-                    type="checkbox"
-                    name="URCT"
-                    id="URCT"
-                    data-disease-name="URCT"
-                    data-color="orangered"
-                    value="URCT"
-                  />
+                  <label class="container-label">
+                    <input
+                      class="disease"
+                      type="checkbox"
+                      name="URCT"
+                      id="URCT"
+                      data-disease-name="URCT"
+                      data-color="orangered"
+                      value="URCT"
+                    />
+                    <div class="checkmark"></div>
+                  </label>
                   <label for="URCT">URCT</label>
                 </div>
                 <div>
-                  <input
-                    class="disease"
-                    type="checkbox"
-                    name="Crown"
-                    id="Crown"
-                    data-disease-name="Crown"
-                    data-color="crimson"
-                    value="Crown"
-                  />
+                  <label class="container-label">
+                    <input
+                      class="disease"
+                      type="checkbox"
+                      name="Crown"
+                      id="Crown"
+                      data-disease-name="Crown"
+                      data-color="crimson"
+                      value="Crown"
+                    />
+                    <div class="checkmark"></div>
+                  </label>
                   <label for="Crown">Crown</label>
                 </div>
 
                 <div>
-                  <input
-                    class="disease"
-                    type="checkbox"
-                    name="OR"
-                    id="OR"
-                    data-disease-name="OR"
-                    data-color="darkorchid"
-                    value="OR"
-                  />
+                  <label class="container-label">
+                    <input
+                      class="disease"
+                      type="checkbox"
+                      name="OR"
+                      id="OR"
+                      data-disease-name="OR"
+                      data-color="darkorchid"
+                      value="OR"
+                    />
+                    <div class="checkmark"></div>
+                  </label>
                   <label for="OR">OR</label>
                 </div>
                 <div>
-                  <input
-                    class="disease"
-                    type="checkbox"
-                    name="ROOT"
-                    id="ROOT"
-                    data-disease-name="ROOT"
-                    data-color="burlywood"
-                    value="ROOT"
-                  />
+                  <label class="container-label">
+                    <input
+                      class="disease"
+                      type="checkbox"
+                      name="ROOT"
+                      id="ROOT"
+                      data-disease-name="ROOT"
+                      data-color="burlywood"
+                      value="ROOT"
+                    />
+                    <div class="checkmark"></div>
+                  </label>
                   <label for="ROOT">ROOT</label>
                 </div>
                 <div>
-                  <input
-                    class="disease"
-                    type="checkbox"
-                    name="CNFT"
-                    id="CNFT"
-                    data-disease-name="CNFT"
-                    data-color="aqua"
-                    value="CNFT"
-                  />
+                  <label class="container-label">
+                    <input
+                      class="disease"
+                      type="checkbox"
+                      name="CNFT"
+                      id="CNFT"
+                      data-disease-name="CNFT"
+                      data-color="aqua"
+                      value="CNFT"
+                    />
+                    <div class="checkmark"></div>
+                  </label>
                   <label for="CNFT">CNFT</label>
                 </div>
                 <div>
-                  <input
-                    class="disease"
-                    type="checkbox"
-                    name="Perio"
-                    id="Perio"
-                    data-disease-name="Perio"
-                    data-color="brown"
-                    value="Perio"
-                  />
+                  <label class="container-label">
+                    <input
+                      class="disease"
+                      type="checkbox"
+                      name="Perio"
+                      id="Perio"
+                      data-disease-name="Perio"
+                      data-color="brown"
+                      value="Perio"
+                    />
+                    <div class="checkmark"></div>
+                  </label>
                   <label for="Perio">Perio</label>
                 </div>
                 <div>
-                  <input
-                    class="disease"
-                    type="checkbox"
-                    name="Fur_Upper"
-                    id="Fur_Upper"
-                    data-disease-name="Fur_Upper"
-                    data-color="brown"
-                    value="Fur_Upper"
-                  />
+                  <label class="container-label">
+                    <input
+                      class="disease"
+                      type="checkbox"
+                      name="Fur_Upper"
+                      id="Fur_Upper"
+                      data-disease-name="Fur_Upper"
+                      data-color="brown"
+                      value="Fur_Upper"
+                    />
+                    <div class="checkmark"></div>
+                  </label>
                   <label for="Fur_Upper">Fur_Upper</label>
                 </div>
                 <div>
-                  <input
-                    class="disease"
-                    type="checkbox"
-                    name="Fur_Lower"
-                    id="Fur_Lower"
-                    data-disease-name="Fur_Lower"
-                    data-color="brown"
-                    value="Fur_Lower"
-                  />
-                  <label for="Fur_Lower">Fur_Lower</label>
-                </div>
-                <div>
-                  <input
-                    class="disease"
-                    type="checkbox"
-                    name="Fur_Lower"
-                    id="Fur_Lower"
-                    data-disease-name="Fur_Lower"
-                    data-color="brown"
-                    value="Fur_Lower"
-                  />
+                  <label class="container-label">
+                    <input
+                      class="disease"
+                      type="checkbox"
+                      name="Fur_Lower"
+                      id="Fur_Lower"
+                      data-disease-name="Fur_Lower"
+                      data-color="brown"
+                      value="Fur_Lower"
+                    />
+                    <div class="checkmark"></div>
+                  </label>
                   <label for="Fur_Lower">Fur_Lower</label>
                 </div>
               </div>
