--- a/index.html
+++ b/index.html
@@ -71,13 +71,16 @@
         id="vision"
       >
         <div class="container">
-          <h2 class="title">our vision</h2>
-          <p class="bottom-title">
-            To revolutionize the field of dentistry by harnessing the power of
-            AI, one diagnosis at a time, providing a second opinion to every
-            dentist by leveraging state-of-the-art technology, leading to more
-            accurate and robust diagnoses of diverse dental problems.
-          </p>
+          <div class="text">
+            <h2 class="title">our vision</h2>
+            <div class="circle"></div>
+            <p class="bottom-title">
+              To revolutionize the field of dentistry by harnessing the power of
+              AI, one diagnosis at a time, providing a second opinion to every
+              dentist by leveraging state-of-the-art technology, leading to more
+              accurate and robust diagnoses of diverse dental problems.
+            </p>
+          </div>
           <div class="vision-cards grid-2">
             <div class="card">
               <img
