Added boneloss line with button to display them or not

--- a/products.html
+++ b/products.html
@@ -292,6 +292,27 @@
                   <label for="Fur_Lower">Fur_Lower</label>
                 </div>
               </div>
+              <div class="boneloss-div hidden">
+                <label class="container-label">
+                  <input
+                    class="checkmark"
+                    type="checkbox"
+                    name="boneloss"
+                    id="boneloss"
+                    data-color="blue"
+                    checked
+                  />
+                  <div class="checkmark"></div>
+                </label>
+                <label for="boneloss">Show Boneloss</label>
+              </div>
+              <canvas id="myCanvas"></canvas>
+              <!-- <canvas
+                id="myCanvas"
+                width="800"
+                height="600"
+                style="border: 1px solid #000000"
+              ></canvas> -->
               <div class="choosing-models">
                 <!-- <div class="waiting-data">
                   <span></span>
