--- a/products.html
+++ b/products.html
@@ -86,7 +86,7 @@
             </div>
             <img
               class="current-img"
-              src="assets/Images/ai-dental-blue.png"
+              src="assets/Images/plus.png"
               alt="ToothVision"
             />
             <div class="uploaded-image">
