Changes regarding styling

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <!-- Page Logo -->
     <link
       rel="icon"
-      href="assets/Images/ai-dental-blue.png"
+      href="assets/Images/dental-logo.png"
     />
     <link
       rel="apple-touch-icon"
-      href="assets/Images/ai-dental-blue.png"
+      href="assets/Images/dental-logo.png"
     />
     <title>ToothVision, your AI dental</title>
   </head>
@@ -64,7 +64,59 @@
         </div>
       </section>
       <!-- === END HERO SECTION === -->
+      <!-- === START GROUP MEMBERS === -->
+      <!-- <section
+        class="section"
+        id="group-members"
+      >
+        <div class="container">
+          <h2 class="title">group members</h2>
+          <div class="choose-cards">
+            <div class="card">
+              <img
+                src="assets/Images/professors/Mohammad.jpg"
+                alt="tooth"
+              />
+              <div class="card-info">
+                <div>
+                  <h3>Dr. Mohammad Abdel-Majeed</h3>
+                  <h4>M.Abdel-Majeed@ju.edu.jo</h4>
+                  <p>
+                    Mohammad Abdel-Majeed is an Associate professor at the
+                    Computer Engineering Department at the University of Jordan
+                    (UJ) since June 2016. He earned his PhD from University of
+                    Southern California (USC) in 2016. Also, he earned his MS
+                    from USC in 2010 and his BS from University of Jordan in
+                    2007. His research focuses on the design of Artificial
+                    Intelligence based systems inthe healthcare and smart city
+                    domains. He has been serving as the head of the computer
+                    engineering department at UJ in the time period between
+                    December-2021 and September 2023.
+                    <br />
 
+                    He has been on the organizing committee/program committee
+                    and/or external reviewer for several local and international
+                    IEEE conferences like IPDPS 2019 and JEEIT 2019. Also he is
+                    an external reviewer for several outstanding IEEE journals
+                    like TLVLSI, TPDS, TCAS and IEEE transactions on
+                    reliability. In addition, he participated in judging several
+                    competitions for undergraduate students and elementary
+                    school students. He also has been part of multiple projects
+                    with European partners like DECAIR, Smart.Eco and
+                    Data-Literacy projects.
+                  </p>
+                </div>
+                <a
+                  href="https://scholar.google.com/citations?user=B7_ws9sAAAAJ&hl=en"
+                  target="_blank"
+                  >Google Scholar</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section> -->
+      <!-- === END GROUP MEMBERS === -->
       <!-- === START OUR VISION === -->
       <section
         class="section"
@@ -72,7 +124,7 @@
       >
         <div class="container">
           <div class="text">
-            <h2 class="title">our vision</h2>
+            <h2 class="title">vision</h2>
             <div class="circle"></div>
             <p class="bottom-title">
               To revolutionize the field of dentistry by harnessing the power of
@@ -147,13 +199,13 @@
       </section>
       <!-- === END OUR VISION === -->
 
-      <!-- === START CHOOSE US === -->
+      <!-- === START DENTAL VISION === -->
       <section
         class="section"
-        id="choose-us"
+        id="dental-vision"
       >
         <div class="container">
-          <h2 class="title">why choose us</h2>
+          <h2 class="title">why dental vision</h2>
           <div class="choose-cards grid-3">
             <div class="card">
               <img
@@ -195,7 +247,7 @@
           </div>
         </div>
       </section>
-      <!-- === END CHOOSE US === -->
+      <!-- === END DENTAL VISION === -->
     </main>
 
     <!-- === START FOOTER === -->
