--- a/products.html
+++ b/products.html
@@ -29,11 +29,11 @@
     <!-- Page Logo -->
     <link
       rel="icon"
-      href="assets/Images/ai-dental-blue.png"
+      href="assets/Images/dental-logo.png"
     />
     <link
       rel="apple-touch-icon"
-      href="assets/Images/ai-dental-blue.png"
+      href="assets/Images/dental-logo.png"
     />
     <title>ToothVision: Our Product</title>
   </head>
@@ -86,7 +86,7 @@
             </div>
             <img
               class="current-img"
-              src="assets/Images/plus.png"
+              src="assets/Images/dental-logo.png"
               alt="ToothVision"
             />
             <div class="uploaded-image">
